--- a/maining.ipynb
+++ b/maining.ipynb
@@ -147,7 +147,193 @@
    "id": "e8cbee17",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import uuid\n",
+    "from typing import TypedDict, List, Annotated, Sequence # FIX: Import Annotated and Sequence\n",
+    "\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "from langchain_core.messages import BaseMessage, HumanMessage\n",
+    "from langchain_google_vertexai import (ChatVertexAI, HarmBlockThreshold,\n",
+    "                                       HarmCategory)\n",
+    "# FIX: Import a working checkpointer and the 'add_messages' helper\n",
+    "from Retriever.Retriever_Agent import retriever_agent\n",
+    "from langgraph.checkpoint.memory import MemorySaver\n",
+    "\n",
+    "from langgraph.graph import END, StateGraph, START\n",
+    "from langgraph.graph.message import add_messages\n",
+    "\n",
+    "\n",
+    "# --- MOCK RETRIEVER FOR TESTING ---\n",
+    "# This is a fake retriever so you can test the graph's logic without errors.\n",
+    "# Replace this with your actual 'from Retriever.Retriever_Agent import retriever_agent' when ready.\n",
+    "\n",
+    "# --- Model and Memory Configuration ---\n",
+    "safety_settings = {\n",
+    "    HarmCategory.HARM_CATEGORY_UNSPECIFIED: HarmBlockThreshold.BLOCK_NONE,\n",
+    "    HarmCategory.HARM_CATEGORY_DANGEROUS_CONTENT: HarmBlockThreshold.BLOCK_MEDIUM_AND_ABOVE,\n",
+    "    HarmCategory.HARM_CATEGORY_HATE_SPEECH: HarmBlockThreshold.BLOCK_ONLY_HIGH,\n",
+    "}\n",
+    "\n",
+    "model_kwargs = {\n",
+    "    \"temperature\": 0.28,\n",
+    "    \"max_output_tokens\": 1000,\n",
+    "    \"top_p\": 0.95,\n",
+    "    \"top_k\": None,\n",
+    "    \"safety_settings\": safety_settings,\n",
+    "}\n",
+    "model = ChatVertexAI(\n",
+    "    model_name=\"gemini-2.5-flash-lite\",\n",
+    "    **model_kwargs\n",
+    ")\n",
+    "\n",
+    "# FIX 1 (cont.): Use the working SqliteSaver instead of the non-functional base class.\n",
+    "memory = MemorySaver()\n",
+    "\n",
+    "\n",
+    "# --- Agent State ---\n",
+    "class AgentState(TypedDict):\n",
+    "    # FIX 2: The 'messages' field MUST be wrapped in Annotated for memory to work.\n",
+    "    messages: Annotated[Sequence[BaseMessage], add_messages]\n",
+    "    relevant_context: str\n",
+    "    condensed_query: str\n",
+    "    image_path: List[str] # Keeping for future use\n",
+    "\n",
+    "# --- Node Definitions (Your code is unchanged here) ---\n",
+    "\n",
+    "def condense_query(state: AgentState) -> AgentState:\n",
+    "    \"\"\"Condenses chat history into a standalone question.\"\"\"\n",
+    "    print(\"---NODE: CONDENSING QUERY---\")\n",
+    "    print(\"--------------------------------------------------\")\n",
+    "    print(f\"DEBUG: Agent received {len(state['messages'])} message(s) in its state.\")\n",
+    "    for i, msg in enumerate(state['messages']):\n",
+    "        print(f\"  -> Message [{i}]: Type={msg.type}, Content='{msg.content}'\")\n",
+    "    print(\"--------------------------------------------------\")\n",
+    "    user_message = state[\"messages\"][-1].content\n",
+    "    history = state[\"messages\"][:-1]\n",
+    "    if not history:\n",
+    "        print(\"VERDICT: No history found. Treating as the first message.\")\n",
+    "        state[\"condensed_query\"] = user_message\n",
+    "        return state\n",
+    "    print(\"VERDICT: History found. Rephrasing query based on context.\")\n",
+    "    formatted_history = \"\\n\".join(\n",
+    "        [f\"{'Human' if isinstance(msg, HumanMessage) else 'AI'}: {msg.content}\" for msg in history]\n",
+    "    )\n",
+    "    condensing_prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", \"Given the conversation and a follow-up question, rephrase the follow-up into a standalone question.\"),\n",
+    "        (\"human\", \"Chat History:\\n{chat_history}\\n\\nFollow Up Input: {question}\"),\n",
+    "    ])\n",
+    "    response = (condensing_prompt | model).invoke({\"chat_history\": formatted_history, \"question\": user_message})\n",
+    "    state[\"condensed_query\"] = response.content\n",
+    "    print(f\"---CONDENSED QUERY: {response.content}---\")\n",
+    "    return state\n",
+    "\n",
+    "def decide_route(state: AgentState) -> str:\n",
+    "    \"\"\"Routes between using the retriever or handling a general conversation.\"\"\"\n",
+    "    print(\"---ROUTER: DECIDING ROUTE---\")\n",
+    "    query = state[\"condensed_query\"]\n",
+    "    \n",
+    "    # This improved prompt gives clearer instructions to the router LLM.\n",
+    "    router_prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", \"\"\"You are an expert at routing user requests. Classify the user's request into one of two categories:\n",
+    "\n",
+    "1.  **use_retriever**: The user is asking a clear factual question about a topic, person, place, or event that likely requires searching a knowledge base.\n",
+    "    Examples: \"Who is the president?\", \"What is LangGraph?\", \"what is my first prompt\"\n",
+    "\n",
+    "2.  **general_conversation**: The user is having a regular conversation. This includes greetings, statements, or giving information.\n",
+    "    Examples: \"hi\", \"thanks that was helpful\", \"my name is Puneet\"\n",
+    "\"\"\"),\n",
+    "        (\"human\", \"User request: {user_query}\"),\n",
+    "    ])\n",
+    "    \n",
+    "    route = (router_prompt | model).invoke({\"user_query\": query})\n",
+    "    \n",
+    "    if \"use_retriever\" in route.content.strip().lower():\n",
+    "        print(\"---ROUTE: To RETRIEVE_CONTEXT---\")\n",
+    "        return \"use_retriever\"\n",
+    "    else:\n",
+    "        print(\"---ROUTE: To GENERAL_CONVERSATION---\")\n",
+    "        return \"general_conversation\"\n",
+    "\n",
+    "def retrieve_context(state: AgentState) -> AgentState:\n",
+    "    \"\"\"Retrieves context from the vector database.\"\"\"\n",
+    "    print(\"---NODE: RETRIEVE CONTEXT---\")\n",
+    "    query = state[\"condensed_query\"]\n",
+    "    context_result = retriever_agent(query)\n",
+    "    chunks = context_result.get(\"retrieved_chunks\", [])\n",
+    "    state[\"relevant_context\"] = \"\\n\\n\".join([chunk.get(\"text\", \"\") for chunk in chunks]) or \"No relevant information found.\"\n",
+    "    print(\"---CONTEXT RETRIEVED---\")\n",
+    "    return state\n",
+    "\n",
+    "def synthesize_answer(state: AgentState) -> AgentState:\n",
+    "    \"\"\"Generates an answer based on retrieved context.\"\"\"\n",
+    "    print(\"---NODE: SYNTHESIZE ANSWER---\")\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", \"Answer the user's question based *only* on the provided context.\"),\n",
+    "        (\"human\", \"Context:\\n{context}\\n\\nQuestion:\\n{query}\"),\n",
+    "    ])\n",
+    "    response_msg = (prompt | model).invoke({\"context\": state[\"relevant_context\"], \"query\": state[\"condensed_query\"]})\n",
+    "    state[\"messages\"].append(response_msg)\n",
+    "    return state\n",
+    "\n",
+    "def handle_conversation(state: AgentState) -> AgentState:\n",
+    "    \"\"\"Handles conversational turns by explicitly passing the full chat history.\"\"\"\n",
+    "    print(\"---NODE: HANDLE CONVERSATION---\")\n",
+    "    query = state[\"condensed_query\"]\n",
+    "    all_messages = state[\"messages\"]\n",
+    "    prompt = ChatPromptTemplate.from_messages([\n",
+    "        (\"system\", \"You are a helpful and conversational AI assistant. Use the provided chat history to answer the user's question.\"),\n",
+    "        (\"user\", \"Here is the chat history:\\n{history}\\n\\nBased on that history, please answer this question:\\n{question}\")\n",
+    "    ])\n",
+    "    history_string = \"\\n\".join(\n",
+    "        f\"{msg.type.upper()}: {msg.content}\" for msg in all_messages\n",
+    "    )\n",
+    "    chain = prompt | model\n",
+    "    response_msg = chain.invoke({\n",
+    "        \"history\": history_string,\n",
+    "        \"question\": query\n",
+    "    })\n",
+    "    state[\"messages\"].append(response_msg)\n",
+    "    return state\n",
+    "\n",
+    "# --- Graph Definition (Your code is unchanged here) ---\n",
+    "graph = StateGraph(AgentState)\n",
+    "graph.add_node(\"condense_query\", condense_query)\n",
+    "graph.add_node(\"retrieve_context\", retrieve_context)\n",
+    "graph.add_node(\"synthesize_answer\", synthesize_answer)\n",
+    "graph.add_node(\"handle_conversation\", handle_conversation)\n",
+    "\n",
+    "graph.set_entry_point(\"condense_query\")\n",
+    "graph.add_conditional_edges(\"condense_query\", decide_route, {\n",
+    "    \"use_retriever\": \"retrieve_context\",\n",
+    "    \"general_conversation\": \"handle_conversation\",\n",
+    "})\n",
+    "graph.add_edge(\"retrieve_context\", \"synthesize_answer\")\n",
+    "graph.add_edge(\"synthesize_answer\", END)\n",
+    "graph.add_edge(\"handle_conversation\", END)\n",
+    "\n",
+    "agent = graph.compile(checkpointer=memory)\n",
+    "\n",
+    "\n",
+    "# --- Main Chat Loop (Your code is unchanged here) ---\n",
+    "if __name__ == \"__main__\":\n",
+    "    conversation_id = str(uuid.uuid4())\n",
+    "    print(f\"✅ Agent started. Conversation ID: {conversation_id}\")\n",
+    "    print(\"Type 'exit' or 'quit' to stop.\")\n",
+    "    try:\n",
+    "        while True:\n",
+    "            user_input = input(\"You: \").strip()\n",
+    "            if not user_input or user_input.lower() in (\"exit\", \"quit\", \"q\"):\n",
+    "                break\n",
+    "            agent_input = {\"messages\": [HumanMessage(content=user_input)]}\n",
+    "            config = {\"configurable\": {\"thread_id\": conversation_id}}\n",
+    "            final_state = agent.invoke(agent_input, config=config)\n",
+    "            last_message = final_state[\"messages\"][-1]\n",
+    "            print(f\"Bot: {last_message.content}\")\n",
+    "    except KeyboardInterrupt:\n",
+    "        print(\"\\nInterrupted. Exiting.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"\\nAn error occurred: {e}\")"
+   ]
   }
  ],
  "metadata": {
